--- a/app/src/main/res/layout/fragment_add_news.xml
+++ b/app/src/main/res/layout/fragment_add_news.xml
@@ -1,14 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#FFFFFF"
     tools:context=".AddNewsFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <Button
+        android:id="@+id/btnToValidateFNews"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_margin="16dp"
+        android:backgroundTint="#2196F3"
+        android:text="Retour au menu principal"
+        android:textColor="#FFF" />
 
-</FrameLayout>
+    <ImageButton
+        android:id="@+id/closeAddNewsFBtn"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:background="?selectableItemBackgroundBorderless"
+        android:scaleType="fitXY"
+        android:src="@drawable/closebtnimg"
+        android:translationX="10dp"
+        android:translationY="10dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="321dp"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:orientation="vertical">
+
+        <EditText
+            android:id="@+id/fnewsTitleInput"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:hint="Ajouter un titre à l'article" />
+
+        <EditText
+            android:id="@+id/fnewsDescInupt"
+            android:layout_width="match_parent"
+            android:layout_height="177dp"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:layout_margin="8dp"
+            android:hint="Ajouter le contenu de l'article" />
+
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/empty_text"
+        style="@style/Base.TextAppearance.AppCompat.Title"
+        android:layout_width="wrap_content"
+        android:layout_height="410dp"
+        android:layout_gravity="center_horizontal|center_vertical"
+        android:text="Créer un nouvel article" />
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
